--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
+    "vocab:generate": "node scripts/generate-vocabulary-index.mjs",
+    "build": "node scripts/generate-vocabulary-index.mjs && next build",
+    "dev": "node scripts/generate-vocabulary-index.mjs && next dev",
     "lint": "eslint .",
     "start": "next start"
   },
@@ -37,7 +38,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@reduxjs/toolkit": "^2.9.0",
     "@vercel/analytics": "1.3.1",
+    "firebase": "^11.3.1",
+    "idb": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +56,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
